add background color, bump up line height

--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@ layout: testBox
 
     <div class="row">    
       <div id="bg0-cont">
-        <div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;" data-500-end="opacity:0" data-end="opacity:1">
+        <div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;" data-500-end="opacity:0" data-100-end="opacity:1">
         </div>
       </div>
     </div>	
@@ -28,7 +28,8 @@ layout: testBox
 
     <div class="row">    
       <div id="bg2-cont">
-        <div id="bg2" data-502p="opacity:0" data-563p="opacity:1" data-500-end="opacity:1" data-end="opacity:0">
+      	<!-- <div id="bg20" data-502p="opacity:0" data-563p="opacity:1" data-500-end="opacity:1" data-100-end="opacity:0"> -->
+        <div id="bg2" data-502p="opacity:0" data-563p="opacity:1" data-500-end="opacity:1" data-100-end="opacity:0">
         </div>
       </div>
     </div>	
