--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@ layout: testBox
 <div id="skrollr-body">
   <div id="master_container" class="m_container">
 
+<!-- la skyline -->
     <div class="row">    
       <div id="bg0-cont">
         <div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;" data-500-end="opacity:0" data-100-end="opacity:1">
@@ -19,13 +20,15 @@ layout: testBox
       </div>
     </div>	
 
+<!-- close up -->
     <div class="row">
-    	<div id="relate0-cont">
-    		<div id="relate0" data-502p="opacity:1" data-563p="opacity:0">
+    	<div id="bg1-cont">
+    		<div id="bg1" data-502p="opacity:1" data-563p="opacity:0">
     		</div>
     	</div>
     </div>	
 
+<!-- farm -->
     <div class="row">    
       <div id="bg2-cont">
       	<!-- <div id="bg20" data-502p="opacity:0" data-563p="opacity:1" data-500-end="opacity:1" data-100-end="opacity:0"> -->
@@ -34,9 +37,10 @@ layout: testBox
       </div>
     </div>	
 
+<!-- la skyline no parallax -->
     <div class="row">    
-      <div id="bg1-cont">
-        <div id="bg1" >          
+      <div id="la-background-cont">
+        <div id="la-background" >          
         </div>
         <div data-0p="opacity:1" data-80p="opacity:0" id="topLogo" class="columns centered">
 	        <img class="centered" src="files/pngs/01_cavaLogo_white.png">
@@ -99,6 +103,8 @@ layout: testBox
     	</div>
     </div>
 
+
+<!-- close up food no parallax -->
     <div class="row">
     	<div id="relate-cont">
     		<div id="relate">    			
@@ -355,6 +361,8 @@ layout: testBox
     	</div>	
     </div>	
 
+
+<!-- farm no parallax -->
 		<div class="row">
     	<div id="farm-container">
     		<div id="farm">    			
