disable partner clicks on mobile

--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@ layout: testBox
     <div class="row">    
       <div id="bg0-cont">
         <div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;">
+      	<!-- <div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;" data-500-end="opacity:0" data-100-end="opacity:1"> -->
         </div>
       </div>
     </div>	
@@ -31,7 +32,7 @@ layout: testBox
 <!-- farm -->
     <div class="row">    
       <div id="bg2-cont">
-      	<!-- <div id="bg20" data-502p="opacity:0" data-563p="opacity:1" data-500-end="opacity:1" data-100-end="opacity:0"> -->
+        <!-- <div id="bg2" data-502p="opacity:0" data-563p="opacity:1" data-500-end="opacity:1" data-100-end="opacity:0"> -->
         <div id="bg2" data-502p="opacity:0" data-563p="opacity:1">
         </div>
       </div>
@@ -287,8 +288,7 @@ layout: testBox
 			        <h4 class="serif hide-for-small-only">We’re proud to collaborate with some of LA’s best.<br>
 			        Hover over each partner to learn a little about them!
 			        </h4>
-			        <h5 class="serif show-for-small-only">We’re proud to collaborate with some of LA’s best.<br>
-			        Click each partner to learn a little about them!
+			        <h5 class="serif show-for-small-only">We’re proud to collaborate with some of LA’s best.			        
 			        </h5>
 					  </div>
 						<div class="small-centered small-8 medium-12" id="partners-bubbles">
