reorg, favicons, delete unneeded photos

--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
 ---
 layout: default
 ---
-<!-- <div class="row" id="box1">
-	<div>Test 1</div>
-
-</div>
-<div class="row" id="box2">
-	<div>Test 2</div>	
-
-</div> -->
 <div id="skrollr-body">
   <div id="master_container" class="m_container">
 
-<!-- la skyline -->
     <div class="row">    
       <div id="bg0-cont">
         <div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;">
@@ -21,7 +12,6 @@ layout: default
       </div>
     </div>	
 
-<!-- close up -->
     <div class="row">
     	<div id="bg1-cont">
     		<div id="bg1" data-502p="opacity:1" data-563p="opacity:0">
@@ -29,22 +19,21 @@ layout: default
     	</div>
     </div>	
 
-<!-- farm -->
     <div class="row">    
       <div id="bg2-cont">
-        <!-- <div id="bg2" data-502p="opacity:0" data-563p="opacity:1" data-500-end="opacity:1" data-100-end="opacity:0"> -->
         <div id="bg2" data-502p="opacity:0" data-563p="opacity:1">
         </div>
       </div>
     </div>	
 
-<!-- la skyline no parallax -->
     <div class="row">    
       <div id="la-background-cont">
         <div id="la-background" >          
         </div>
         <div data-0p="opacity:1" data-80p="opacity:0" id="topLogo" class="columns centered">
-	        <img class="centered" src="files/pngs/01_cavaLogo_white.png">
+	        <a href="http://cavagrill.com/" target="_blank">
+	        	<img class="centered" src="files/pngs/01_cavaLogo_white.png">
+	        </a>
 	      </div>
         <div data-0p="opacity:1" data-60p="opacity:0" id="title">
           <h3 class="white-text bold">Hello,<br>Hungry<br>People.</h3>    
@@ -104,8 +93,6 @@ layout: default
     	</div>
     </div>
 
-
-<!-- close up food no parallax -->
     <div class="row">
     	<div id="relate-cont">
     		<div id="relate">    			
@@ -314,7 +301,6 @@ layout: default
 								</div>
 							</div>
 						</div>
-						<!-- <div id="partner-info-cont" class="small-8 medium-9 small-centered hide-for-small-only"> -->
 						<div id="partner-info-cont" class="small-12 medium-9 large-7 small-centered">
 							<div id="partner-info" class="small-12 medium-10">
 								<h4 class="white-text bold">Sugarbloom Bakery</h4>
@@ -324,15 +310,6 @@ layout: default
 								<img id="partner-pic-sub" src="files/pngs/partners_sugarbloom.png">
 							</div>
 						</div>				
-						<!-- <div id="partner-info-cont2" class="small-8 medium-9 small-centered show-for-small-only">						
-							<div id="partner-info" class="small-8 medium-10">
-								<h4 class="white-text bold">Sugarbloom Bakery</h4>
-								<p class="serif white-text">Headed up by designer turned classically trained pastry chef Sharon Wang, Sugarbloom Bakery creates addictive sweets and treats for LA. At CAVA, we’re serving Sugarbloom’s Triple Threat Chocolate Chunk Cookie, enriched with three types of chocolate and a sprinkle of sea salt.</p>
-							</div>
-							<div id="partner-pic" class="">
-								<img id="partner-pic-sub" src="files/pngs/partners_sugarbloom.png">
-							</div>
-						</div>				 -->
 					</div>											
 				</div>				
 			</div>
@@ -361,8 +338,6 @@ layout: default
     	</div>	
     </div>	
 
-
-<!-- farm no parallax -->
 		<div class="row">
     	<div id="farm-container">
     		<div id="farm">    			
@@ -396,7 +371,6 @@ layout: default
     </div>	
 
     <div class="row">
-    	<!-- <div id="orange2-bar-container"> -->
     	<div id="orange2-bar-container" data-bottom-top="margin-top:-10%" data--200-top="margin-top:-140%;">
     		<div id="orange2-box">
     			<div id="orange2-triangle-top">    				
@@ -423,7 +397,6 @@ layout: default
     	</div>	
     </div>	
 
-
 		<div class="row">
 			<div id="hope-container">
 				<div id="hope">
@@ -444,8 +417,6 @@ layout: default
 		        <h3 class="serif white-text show-for-small-only" style="text-transform: uppercase !important;">
 		          We hope you will be too.
 		        </h3>
-
-
 					</div>					
 				</div>				
 			</div>
@@ -455,7 +426,7 @@ layout: default
     	<div id="footer-container">
     		<div id="footer">   
     			<div id="footer-image" class="small-4 small-centered medium-3">
-    				<img src="files/pngs/53_logo_footer.png"> 				
+    				<a href="http://cavagrill.com/" target="_blank"><img src="files/pngs/53_logo_footer.png"></a>
     			</div>
     			<div id="footer-text" class="small-8 small-centered medium-6">
   					<h5 class="serif white-text">
