new photos, slight text tweaks

--- a/index.html
+++ b/index.html
@@ -403,17 +403,16 @@ layout: default
 					<div id="hope-text" class="small-10 medium-10 large-6 small-centered">
 						<h2 class="bold white-text hide-for-small-only">
 	          Ask your DC Friends, we think they’ll tell you they’re big fans.
-		        </h2>
-		        <br>
+	          <br>
+		        </h2>		        
 		        <h1 class="serif white-text hide-for-small-only" style="text-transform: uppercase !important;">
 		          We hope you will be too.
 		        </h1>
 		        <div class="white-bar hide-for-small-only" id="wb4"></div>
 
-		        <h4 class="bold white-text show-for-small-only">
+		        <h4 style="margin-top:5px;" class="bold white-text show-for-small-only">
 	          Ask your DC Friends, we think they’ll tell you they’re big fans.
 		        </h4>
-		        <br>
 		        <h3 class="serif white-text show-for-small-only" style="text-transform: uppercase !important;">
 		          We hope you will be too.
 		        </h3>
