--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: default
 
     <div class="row">    
       <div id="bg0-cont">
-        <div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;">
-      	<!-- <div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;" data-500-end="opacity:0" data-100-end="opacity:1"> -->
+        <!-- <div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;"> -->
+      	<div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;" data-500-end="opacity:0" data-100-end="opacity:1">
         </div>
       </div>
     </div>	
@@ -21,7 +21,8 @@ layout: default
 
     <div class="row">    
       <div id="bg2-cont">
-        <div id="bg2" data-502p="opacity:0" data-563p="opacity:1">
+        <!-- <div id="bg2" data-502p="opacity:0" data-563p="opacity:1"> -->
+        <div id="bg2" data-502p="opacity:0" data-563p="opacity:1" data-500-end="opacity:1" data-100-end="opacity:0">
         </div>
       </div>
     </div>	
