--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div id="skrollr-body">
   <div id="master_container" class="m_container">
 
-    <div class="row">    
+    <div class="row" id="bg00">    
       <div id="bg0-cont">
         <!-- <div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;"> -->
       	<div id="bg0" data-0="margin-top:-55%" data-1000="margin-top:-65%; opacity:1" data-1351="opacity:0;" data-500-end="opacity:0" data-100-end="opacity:1">
