--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 
     <div class="row">
     	<div id="bg1-cont">
-    		<div id="bg1" data-502p="opacity:1" data-563p="opacity:0">
+    		<div id="bg1" data-0="opacity:0" data-502p="opacity:1" data-563p="opacity:0">
     		</div>
     	</div>
     </div>	
@@ -489,6 +489,8 @@ layout: default
     					<div class="foot-bub-text small-12 small-centered medium-10 serif white-text">Just want to stay in the know? Sign up here.</div>
     				</div>
     			</div>
+    			<div class="show-for-small-only">
+    				test</div>
     		</div>    		
     	</div>	
     </div>	
