--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@ layout: default
     					<div class="foot-bub-text small-12 small-centered medium-10 serif white-text">Just want to stay in the know? Sign up here.</div>
     				</div>
     			</div>
-    			<div class="show-for-small-only">
-    				test</div>
+    			<div style="height:100px;"class="show-for-small-only">
+    			</div>
     		</div>    		
     	</div>	
     </div>	
