--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ layout: default
 			        Not a Flat<br>
 			        Routine
 			        </h2>
-			        <img class="centered" src="files/pngs/06_greenBowl_cutout.png">
+			        <img class="centered" src="files/pngs/06_greenBowl_cutout.jpg">
 			        <h2 class="white-text bold" style="margin-bottom:20px; margin-top:20px;">
 			        It’s a bold<br>
 			        Lifestyle.
@@ -155,16 +155,16 @@ layout: default
 			<div id="bubbles-cont">
 					<div id="bubbles" class="small-10 small-centered">
 						<div class="bubble" id="bub1" data-bottom-top="margin-top:16%" data--400-top="margin-top:-30%">
-							<img src="files/pngs/13_ourFood_bowl.png">
+							<img src="files/pngs/13_ourFood_bowl.jpg">
 						</div>
 						<div class="bubble" id="bub2" data-bottom-top="margin-top:16%" data--400-top="margin-top:-30%">
-							<img src="files/pngs/14_ourFood_tableOverhead.png">
+							<img src="files/pngs/14_ourFood_tableOverhead.jpg">
 						</div>
 						<div class="bubble" id="bub3" data-bottom-top="margin-top:0%" data--300-top="margin-top:-40%">
-							<img src="files/pngs/15_ourFood_pitas.png">
+							<img src="files/pngs/15_ourFood_pitas.jpg">
 						</div>
 						<div class="bubble" id="bub4" data-bottom-top="margin-top:0%" data--300-top="margin-top:-50%">
-							<img src="files/pngs/16_ourFood_juices.png">
+							<img src="files/pngs/16_ourFood_juices.jpg">
 						</div>
 						<div class="bubble" id="bub5" data-bottom-top="margin-top:-15%" data--300-top="margin-top:-95%">
 							<div id="vibrant2" class="small-12 small-offset-2">
@@ -198,13 +198,13 @@ layout: default
 					<div id="location-top" class="small-12">
 						<div id="topanga-1" class="topanga medium-3 hide-for-small-only columns">
 							<div class="bot-align">
-								<img src="files/pngs/19_locations_bowlOverhead.png">								
+								<img src="files/pngs/19_locations_bowlOverhead.jpg">								
 							</div>
 						</div>
 						<div id="topanga-2" class="topanga small-6 medium-3 columns">
 							<div class="bot-align">	
 								<div class="loc-half">
-									<img src="files/pngs/22_locations_topangaNight.png">
+									<img src="files/pngs/22_locations_topangaNight.jpg">
 								</div>
 								<div class="loc-half">
 									<center>
@@ -217,24 +217,24 @@ layout: default
 						</div>
 						<div id="topanga-3" class="topanga small-6 medium-3 columns">
 							<div class="bot-align">
-								<img src="files/pngs/23_locations_topangaInterior.png">
+								<img src="files/pngs/23_locations_topangaInterior.jpg">
 							</div>							
 						</div>
 						<div id="topanga-4" class="topanga medium-3 hide-for-small-only columns">
 							<div class="bot-align">
-								<img src="files/pngs/25_locations_spindrift.png">
+								<img src="files/pngs/25_locations_spindrift.jpg">
 							</div>														
 						</div>
 					</div>
 					<div id="location-bottom" class="small-12">
 						<div id="westwood-1" class="westwood medium-3 hide-for-small-only columns">
 							<div class="top-align">
-								<img src="files/pngs/24_locations_fairfax.png">								
+								<img src="files/pngs/24_locations_fairfax.jpg">								
 							</div>
 						</div>
 						<div id="westwood-2" class="westwood small-6 medium-3 columns">
 							<div class="top-align">
-								<img src="files/pngs/20_locations_bowlChinatown.png">
+								<img src="files/pngs/20_locations_bowlChinatown.jpg">
 							</div>							
 						</div>
 						<div id="westwood-3" class="westwood small-6 medium-3 columns">
@@ -247,13 +247,13 @@ layout: default
 									</center>
 								</div>							
 								<div class="loc-half">
-									<img src="files/pngs/21_locations_westwood.png">
+									<img src="files/pngs/21_locations_westwood.jpg">
 								</div>
 							</div>
 						</div>
 						<div id="westwood-4" class="westwood medium-3 hide-for-small-only columns">
 							<div class="top-align">
-								<img src="files/pngs/26_locations_ashburn.png">
+								<img src="files/pngs/26_locations_ashburn.jpg">
 							</div>														
 						</div>											
 					</div>
@@ -308,7 +308,7 @@ layout: default
 								<p class="serif white-text">Headed up by designer turned classically trained pastry chef Sharon Wang, Sugarbloom Bakery creates addictive sweets and treats for LA. At CAVA, we’re serving Sugarbloom’s Triple Threat Chocolate Chunk Cookie, enriched with three types of chocolate and a sprinkle of sea salt.</p>
 							</div>
 							<div id="partner-pic" class="hide-for-small-only">
-								<img id="partner-pic-sub" src="files/pngs/partners_sugarbloom.png">
+								<img id="partner-pic-sub" src="files/pngs/partners_sugarbloom.jpg">
 							</div>
 						</div>				
 					</div>											
@@ -365,14 +365,29 @@ layout: default
 		        </h4>	        
 		      </div> 
 				  <div id="dips-img-cont" class="small-10 small-centered ">
-	        	<img src="files/pngs/48_dips_photoGrid.png">	
+	        	<!-- <img src="files/pngs/48_dips_photoGrid.png">	 -->
+		        <div id="dips-img-cont2">
+		        	<div class="small-6 columns dip-i">
+		        		<img src="files/pngs/dips_photos_radishHummus.jpg">
+		        	</div>
+		        	<div class="small-6 columns dip-i">
+		        		<img src="files/pngs/dips_photos_hummusEggToast.jpg">
+		        	</div>
+		        	<div class="small-6 columns dip-i">
+		        		<img src="files/pngs/dips_photos_spicyHummus.jpg">
+		        	</div>
+		        	<div class="small-6 columns dip-i">
+		        		<img src="files/pngs/dips_photos_eggplantDip.jpg">
+		        	</div>
+		        </div>	
 	        </div>	   			
     		</div>    		
     	</div>	
     </div>	
 
     <div class="row">
-    	<div id="orange2-bar-container" data-bottom-top="margin-top:-10%" data--200-top="margin-top:-140%;">
+    	<div id="orange2-bar-container" data-bottom-top="margin-top:-10%" data--200-top="margin-top:-100%;">
+    	<!-- <div id="orange2-bar-container"> -->
     		<div id="orange2-box">
     			<div id="orange2-triangle-top">    				
     			</div>
